--- a/css.css
+++ b/css.css
@@ -2,8 +2,29 @@
   width:70%;
   height:100%;
   background-color:gray;
+  float:left;
+
+}
+.users{
+  border-style: solid;
+  border: 5px black;
+}
+#options{
+  width:29.8%;
+  height:auto;
+  float: right;
 }
 .title{
-  margin-left:40%;
-  font-size:20px;
+  margin-top:15px;
+  margin-left:120px;
+  font-size:24px;
+  position:fixed;
+  font-style: bold;
+}
+.profile-image{
+  width:100px;
+  height:100px;
+  border-radius:15px;
+  margin-top:5px;
+  margin-left:5px;
 }
